@@ -2,6 +2,7 @@ ChangeLog for ke_search_hooks
 
 Upcoming version
 [TASK]    Migrate query builder calls
+[FEATURE] Add incremental indexing to ExampleIndexer, https://github.com/tpwd/ke_search_hooks/issues/1
 
 Version 5.0.0, November 2022
 [!!!]     This version drops support for TYPO3 10
